--- a/tools/gitPushHelper.ipynb
+++ b/tools/gitPushHelper.ipynb
@@ -16,13 +16,16 @@
    "execution_count": 1,
    "id": "e7cd415e-9e19-48ff-96a7-6a57a0f86da5",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87bcaacf51ac4e4380985cc7752d3482",
+       "model_id": "86ad16047dcb4f3da9cd4a7f8d6ecb45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf1dda58fa0b451291cea17403cb20a0",
+       "model_id": "6102ca708cd24cdf98c1f7968adf6a54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dcec1ea0518471c8f1abacad06261e0",
+       "model_id": "e86a7e1e26e942d98138955e5fddefe3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33283b4965344c6cb5115746ed68ad2c",
+       "model_id": "2fee865f4613498c90f521f267426d8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c86f2c1c39e14e90ad9f98e3f890bcd4",
+       "model_id": "31549887ad9c4536b61669cb13d8bab9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb7e31fa914441bbaaf57239a3afb840",
+       "model_id": "0264915af892450caa9eb8bf9ba9fb75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53485d3ca0fc4ff98589840d4ce65495",
+       "model_id": "bc7d710ab5b9480c81da85f6865ea1eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,177 +227,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "66978fd1-7b2a-4a78-9516-3afb4ff6a41a",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## <i class=\"fa fa-download\"></i> 安装或更新"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ad3426b-6fac-4e87-b538-d4f1affdded1",
-   "metadata": {},
-   "source": [
-    "安装或更新OneClick-stale-diffusion本体"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "90d07288-756b-416b-ad8d-4146a45b0c90",
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true,
-    "tags": []
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dc5e2d2327c4d91813cce20830e6e1d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='warning', description='正在安装中...', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f49f49f3d5ee480390f9949507d8b63e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='warning', description='需要重装？', icon='question-circle', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "export http_proxy=http://192.168.126.12:12798 && export https_proxy=http://192.168.126.12:12798 && cd /root/OneClick-stable-diffusion && git push\n"
+     ]
     }
    ],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from subprocess import getoutput\n",
-    "from IPython.display import display,clear_output\n",
-    "import os\n",
-    "import sys\n",
-    "# sys.path.append('../')\n",
-    "# from func.env import installDir\n",
-    "installDir = '/root/OneClick-stable-diffusion/'\n",
-    "\n",
-    "btn = widgets.Button(\n",
-    "    value=False,\n",
-    "    description='正在安装中...',\n",
-    "    disabled=False,\n",
-    "    button_style='warning', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    # tooltip='Description',\n",
-    "    # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n",
-    "reinstallBtn = widgets.Button(\n",
-    "    value=False,\n",
-    "    description='需要重装？',\n",
-    "    disabled=False,\n",
-    "    button_style='warning', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    # tooltip='Description',\n",
-    "    icon='question-circle' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n",
-    "def autoUpdate(obj):\n",
-    "    obj.description='正在自动更新...'\n",
-    "    obj.button_style='info'\n",
-    "    obj.icon='upload'\n",
-    "    stdout = !{proxy} &&\\\n",
-    "    cd $installDir &&\\\n",
-    "    git pull\n",
-    "    if 'Already up to date.' in stdout:\n",
-    "        obj.description='自动更新完成'\n",
-    "        obj.button_style='success'\n",
-    "        obj.icon='check-circle'\n",
-    "\n",
-    "def reinstall(obj):\n",
-    "    obj.close()\n",
-    "    btn.description=\"正在重装...\"\n",
-    "    btn.button_style='warning'\n",
-    "    btn.icon='exclamation-triangle'\n",
-    "    !rm -rf $installDir\n",
-    "    install_language_pack()\n",
-    "\n",
-    "def install_language_pack():\n",
-    "    # print(\"开始安装\")\n",
-    "    stdout =!{proxy} &&\\\n",
-    "            cd /root &&\\\n",
-    "            git clone https://github.com/lcolok/OneClick-stable-diffusion\n",
-    "\n",
-    "    def getdirsize(dir):\n",
-    "       size = 0\n",
-    "       for root, dirs, files in os.walk(dir):\n",
-    "          size += sum([os.path.getsize(os.path.join(root, name)) for name in files])\n",
-    "       return size\n",
-    "\n",
-    "    sz = getdirsize(installDir)\n",
-    "    # print(stdout)\n",
-    "    # print(sz)\n",
-    "    for i in stdout:\n",
-    "        # print(i)\n",
-    "        if sz>0 :\n",
-    "            if \"already exists and is not an empty directory\" in i:\n",
-    "                btn.description='已经安装过'\n",
-    "                btn.button_style='info'\n",
-    "                btn.icon='check-circle'\n",
-    "                autoUpdate(btn)\n",
-    "                display(reinstallBtn)\n",
-    "            else:\n",
-    "                btn.description='安装成功!'\n",
-    "                btn.button_style='success'\n",
-    "                btn.icon='check'\n",
-    "        else:\n",
-    "            btn.description=\"安装失败\"\n",
-    "            btn.button_style='danger'\n",
-    "            btn.icon='exclamation-triangle'\n",
-    "  \n",
-    "            \n",
-    "reinstallBtn.on_click(reinstall)\n",
-    "\n",
-    "display(btn)\n",
-    "install_language_pack()"
+    "r = f'{proxy} && cd /root/OneClick-stable-diffusion && git push'\n",
+    "print(r)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779d49cf-a699-42fd-878f-1d8f5800e205",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python3.10.6",
    "language": "python",
-   "name": "python3"
+   "name": "py3.10.6"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
