--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -82,6 +82,8 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../') # 因为func与ipynb位于同一个目录下，所以要往上一层路径索引\n",
     "from func.env import setProxy\n",
     "cb=setProxy()\n",
     "proxy=cb['proxy']\n",
@@ -511,7 +513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -525,14 +527,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
   "toc-showtags": true,
   "vscode": {
    "interpreter": {
-    "hash": "2f394aca7ca06fed1e6064aef884364492d7cdda3614a461e02e6407fc40ba69"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
