support sm61 arch

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
     "jupyter": {
@@ -232,7 +232,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0da41340c4044cf49a7c695963d1adad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='已经预装', icon='check', style=ButtonStyle(), tooltip='Description')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
@@ -275,15 +290,11 @@
     "    clear_output(wait=True)\n",
     "    showToast(arch)\n",
     "\n",
-    "if (arch == 'sm80'):\n",
+    "archWhiteList = ['sm80','sm75','sm70','sm89','sm61']\n",
+    "\n",
+    "if arch in archWhiteList:\n",
     "     installCMD(arch)\n",
-    "elif (arch == 'sm75'):\n",
-    "     installCMD(arch)\n",
-    "elif (arch == 'sm70'):\n",
-    "     installCMD(arch)\n",
-    "elif (arch == 'sm89'):\n",
-    "     installCMD(arch)\n",
-    "elif (arch == 'sm86'):\n",
+    "elif arch == 'sm86':\n",
     "    # print('该镜像已经预装该版本的编译包')\n",
     "    display(\n",
     "        widgets.Button(\n",
@@ -464,7 +475,7 @@
     "arch = cb['arch']\n",
     "gpu = cb['gpu']\n",
     "\n",
-    "whiteList = ['sm80','sm75','sm70','sm86','sm89']\n",
+    "whiteList = ['sm80','sm75','sm70','sm86','sm89','sm61']\n",
     "\n",
     "if arch in whiteList:\n",
     "    archCondition = True\n",
