auto search Stable-Diffusion-WebUI pathdir

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -177,27 +177,61 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n",
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "\n",
+    "from IPython.display import display,clear_output\n",
     "import ipywidgets as widgets\n",
+    "from func.env import setProxy,webUIDir\n",
     "\n",
-    "!source activate &&\\\n",
-    "conda activate py3.10.6 &&\\\n",
-    "{proxy} &&\\\n",
-    "cd /root/stable-diffusion-webui/ && \\\n",
-    "git pull && \\\n",
-    "python -V && \\\n",
-    "python -m pip install -r requirements.txt\n",
-    "\n",
-    "clear_output(wait=True)\n",
-    "\n",
-    "widgets.Button(\n",
+    "alertBtn = widgets.Button(\n",
     "    value=False,\n",
-    "    description='更新完成!',\n",
+    "    description='',\n",
     "    disabled=False,\n",
-    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Description',\n",
-    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n"
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='',\n",
+    "    icon='' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
+    "    \n",
+    "display(alertBtn)\n",
+    "    \n",
+    "if os.path.exists(webUIDir):\n",
+    "    \n",
+    "    alertBtn.description='正在更新...'\n",
+    "    alertBtn.button_style='warning'\n",
+    "    alertBtn.icon='upload'\n",
+    "\n",
+    "    r = !source activate &&\\\n",
+    "    conda activate py3.10.6 &&\\\n",
+    "    $proxy &&\\\n",
+    "    cd $webUIDir &&\\\n",
+    "    git pull &&\\\n",
+    "    python -V &&\\\n",
+    "    python -m pip install -r requirements.txt\n",
+    "\n",
+    "    # print(r)\n",
+    "    \n",
+    "    if 'Already up to date.' in r:\n",
+    "        alertBtn.description='更新完成!'\n",
+    "        alertBtn.button_style='success'\n",
+    "        alertBtn.icon='check'\n",
+    "    else:\n",
+    "        alertBtn.description='更新失败!'\n",
+    "        alertBtn.button_style='danger'\n",
+    "        alertBtn.icon='exclamation'\n",
+    "\n",
+    "\n",
+    "# clear_output(wait=True)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -224,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
     "jupyter": {
@@ -232,22 +266,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0da41340c4044cf49a7c695963d1adad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='已经预装', icon='check', style=ButtonStyle(), tooltip='Description')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
@@ -346,9 +365,20 @@
    },
    "outputs": [],
    "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.env import setProxy,webUIDir,extDir,findDir,getDirSize\n",
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
-    "import os\n",
+    "from IPython.display import display,clear_output\n",
+    "\n",
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
     "\n",
     "btn = widgets.Button(\n",
     "    value=False,\n",
@@ -360,25 +390,19 @@
     ")\n",
     "\n",
     "def install_language_pack(obj):\n",
-    "    print(\"开始安装\")\n",
+    "    # print(\"开始安装\")\n",
+    "    zhLocalDir = findDir('stable-diffusion-webui-localization-zh_CN',extDir)\n",
+    "    \n",
     "    stdout = !{proxy} &&\\\n",
-    "    cd /root/stable-diffusion-webui/extensions/ && \\\n",
+    "    cd $extDir &&\\\n",
     "    git clone https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN\n",
     "    \n",
-    "    \n",
-    "    def getdirsize(dir):\n",
-    "       size = 0\n",
-    "       for root, dirs, files in os.walk(dir):\n",
-    "          size += sum([os.path.getsize(os.path.join(root, name)) for name in files])\n",
-    "       return size\n",
+    "    fileSize = getDirSize(zhLocalDir)\n",
     "\n",
-    "    dirpath = '/root/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-zh_CN'\n",
-    "    sz = getdirsize(dirpath)\n",
-    "\n",
-    "    print(sz)\n",
+    "    # print(f'file size:{fileSize}')\n",
     "    for i in stdout:\n",
-    "        print(i)\n",
-    "        if sz>=171055 :\n",
+    "        # print(i)\n",
+    "        if fileSize>=171055 :\n",
     "            if \"already exists and is not an empty directory\" in i:\n",
     "                btn.description='已经安装过'\n",
     "                btn.button_style='warning'\n",
@@ -393,8 +417,10 @@
     "            btn.button_style='danger'\n",
     "            btn.icon='exclamation-triangle'\n",
     "\n",
-    "btn.on_click(install_language_pack)\n",
-    "btn"
+    "# btn.on_click(install_language_pack)\n",
+    "# btn\n",
+    "install_language_pack(btn)\n",
+    "display(btn)"
    ]
   },
   {
@@ -417,21 +443,64 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n",
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.env import setProxy,webUIDir,extDir,findDir,findFile,getDirSize,styleURL\n",
     "import ipywidgets as widgets\n",
+    "from subprocess import getoutput\n",
+    "from IPython.display import display,clear_output\n",
     "\n",
-    "!{proxy} &&\\\n",
-    "cd /root/stable-diffusion-webui && wget https://raw.githubusercontent.com/lcolok/My_SD_styles.csv/main/styles.csv\n",
-    "\n",
-    "clear_output()\n",
-    "widgets.Button(\n",
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
+    "    \n",
+    "alertBtn = widgets.Button(\n",
     "    value=False,\n",
-    "    description='下载完成!',\n",
+    "    description='',\n",
     "    disabled=False,\n",
-    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Description',\n",
-    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")"
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='',\n",
+    "    icon='' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "display(alertBtn)\n",
+    "\n",
+    "stylesDir = os.path.join(webUIDir, 'styles.csv')\n",
+    "if os.path.exists(stylesDir):\n",
+    "    alertBtn.description='已经安装过!'\n",
+    "    alertBtn.button_style='info'\n",
+    "    alertBtn.icon='check'\n",
+    "else:  \n",
+    "    alertBtn.description='下载中...'\n",
+    "    alertBtn.button_style='warning'\n",
+    "    alertBtn.icon='download'\n",
+    "    \n",
+    "    stdout = !$proxy &&\\\n",
+    "    cd $webUIDir &&\\\n",
+    "    wget $styleURL\n",
+    "    # print(('\\n').join(stdout))\n",
+    "    if '‘styles.csv’ saved' in ('\\n').join(stdout):\n",
+    "        alertBtn.description='下载完成!'\n",
+    "        alertBtn.button_style='success'\n",
+    "        alertBtn.icon='check'\n",
+    "    else:\n",
+    "        alertBtn.description='下载失败!'\n",
+    "        alertBtn.button_style='danger'\n",
+    "        alertBtn.icon='exclamation-triangle'\n",
+    "    \n",
+    "# clear_output()\n",
+    "# widgets.Button(\n",
+    "#     value=False,\n",
+    "#     description='下载完成!',\n",
+    "#     disabled=False,\n",
+    "#     button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "#     tooltip='Description',\n",
+    "#     icon='check' # (FontAwesome names without the `fa-` prefix)\n",
+    "# )"
    ]
   },
   {
@@ -454,18 +523,15 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.env import setProxy,webUIDir,extDir,findDir,findFile,getDirSize,styleURL,getArch,xformersDir\n",
+    "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
-    "from func.env import getArch\n",
+    "from IPython.display import display,clear_output\n",
     "\n",
     "archCondition = False\n",
     "canUseXformers = False\n",
-    "\n",
-    "def getdirsize(dir):\n",
-    "   size = 0\n",
-    "   for root, dirs, files in os.walk(dir):\n",
-    "      size += sum([os.path.getsize(os.path.join(root, name)) for name in files])\n",
-    "   return size\n",
     "\n",
     "# cb = !source activate &&\\\n",
     "# conda activate py3.10.6 &&\\\n",
@@ -482,7 +548,7 @@
     "else:\n",
     "    archCondition = False\n",
     "        \n",
-    "xformerFolderSize = getdirsize(\"/root/stable-diffusion-webui/repositories/xformers\")\n",
+    "xformerFolderSize = getDirSize(xformersDir)\n",
     "if(xformerFolderSize>=268769047 and archCondition):\n",
     "    canUseXformers = True\n",
     "else:\n",
@@ -491,7 +557,7 @@
     "args = [\n",
     "        'source activate','&&',\n",
     "        'conda activate py3.10.6','&&',\n",
-    "        'cd /root/stable-diffusion-webui/','&&',\n",
+    "        f'cd {webUIDir}','&&',\n",
     "        'python launch.py',\n",
     "        '--share',\n",
     "        '--opt-split-attention',\n",
@@ -524,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.8.10"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
