--- a/tools/gitPushHelper.ipynb
+++ b/tools/gitPushHelper.ipynb
@@ -12,14 +12,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc7fba87f55a4c7c82fa2e43cac8013a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='在使用【泉州】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f030230b94d479bb84e0b1b71000deb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc31443011904594ba97d9d6df4b6610",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='北京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3f3e4b09aea471ea853880e44a4aca1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='内蒙', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02369e6b41b640b9984cb2cbedc56817",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='泉州', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4c4ebbfd2cf49f7bc00349e9c25de59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3684af88d3744feb0a6b26ac591f4a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='佛山', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os,subprocess\n",
     "from ipywidgets import interact,widgets\n",
@@ -131,10 +230,22 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com': "
+     ]
+    }
+   ],
    "source": [
+    "!git config --global user.email 425311101@qq.com\n",
+    "!git config --global user.name lcolok\n",
+    "\n",
     "r = f'{proxy} && cd /root/OneClick-stable-diffusion && git push'\n",
-    "print(r)"
+    "\n",
+    "!$r"
    ]
   }
  ],
