speed up Xformers installed checker and fixed bug

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -53,14 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7a5f31-3268-4945-a99f-c27504aa2bf2",
-   "metadata": {},
-   "source": [
-    "## 加载全局函数"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a586155e-1ce7-4cb9-b94e-c044fd85e15f",
    "metadata": {
     "tags": []
@@ -115,24 +107,24 @@
     "from IPython.display import clear_output\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "s = getoutput('conda info --env')\n",
-    "if 'py3.10.6' not in s:\n",
-    "    print('当前系统中没有py3.10.6环境，正在安装')\n",
-    "    # 创建Conda新的虚拟环境\n",
-    "    # 构建一个虚拟环境，名为: py3.10.6\n",
-    "    # 更新bashrc中的环境变量\n",
-    "    !source ~/miniconda3/etc/profile.d/conda.sh &&\\\n",
-    "    conda create -n py3.10.6 python=3.10.6 &&\\\n",
-    "    conda init bash && source /root/.bashrc\n",
-    "else:\n",
-    "    print('已经安装了py3.10.6环境')\n",
-    "    # !source activate &&\\\n",
-    "    # conda activate py3.10.6 &&\\\n",
-    "    # conda install ipykernel &&\\\n",
-    "    # ipython kernel install --user --name=py3.10.6 --display-name \"Python3.10.6\" # 设置kernel，--user表示当前用户，--name为虚拟环境名称，--display-name为笔记本显示名称\n",
+    "# s = getoutput('conda info --env')\n",
+    "# if 'py3.10.6' not in s:\n",
+    "#     print('当前系统中没有py3.10.6环境，正在安装')\n",
+    "#     # 创建Conda新的虚拟环境\n",
+    "#     # 构建一个虚拟环境，名为: py3.10.6\n",
+    "#     # 更新bashrc中的环境变量\n",
+    "#     !source ~/miniconda3/etc/profile.d/conda.sh &&\\\n",
+    "#     conda create -n py3.10.6 python=3.10.6 &&\\\n",
+    "#     conda init bash && source /root/.bashrc\n",
+    "# else:\n",
+    "#     print('已经安装了py3.10.6环境')\n",
+    "#     # !source activate &&\\\n",
+    "#     # conda activate py3.10.6 &&\\\n",
+    "#     # conda install ipykernel &&\\\n",
+    "#     # ipython kernel install --user --name=py3.10.6 --display-name \"Python3.10.6\" # 设置kernel，--user表示当前用户，--name为虚拟环境名称，--display-name为笔记本显示名称\n",
     "\n",
-    "clear_output(wait=True)\n",
-    "# print(\"Done!\")\n",
+    "# clear_output(wait=True)\n",
+    "# # print(\"Done!\")\n",
     "\n",
     "\n",
     "widgets.Button(\n",
@@ -251,8 +243,8 @@
     "tags": []
    },
    "source": [
-    "大幅减少计算时间和显存占用，代价是生成的图每个都有点变化，强烈推荐安装\n",
-    "但不同核心代号的显卡需要不同的编译包，不能混用\n",
+    "大幅减少计算时间和显存占用，代价是生成的图每个都有点变化，强烈推荐安装!  \n",
+    "但不同核心代号的显卡需要不同的编译包，不能混用  \n",
     "当然此笔记会帮你自动检测这台机器是否适合安装，而且会自动帮你安装合适的编译包"
    ]
   },
@@ -268,10 +260,12 @@
    },
    "outputs": [],
    "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display,clear_output\n",
-    "from func.env import getArch\n",
+    "from func.env import getArch,getDirSize\n",
     "import json\n",
     "\n",
     "# cb = !source activate &&\\\n",
@@ -282,20 +276,34 @@
     "arch = cb['arch']\n",
     "gpu = cb['gpu']\n",
     "\n",
-    "\n",
-    "\n",
-    "def showToast(arch):\n",
-    "    print(f'本机GPU为【{gpu}】，对应的英伟达架构名为【{arch}】，已安装匹配【{arch}】架构的Xformers预编译包')\n",
-    "    display(\n",
-    "        widgets.Button(\n",
-    "        value=False,\n",
-    "        description='完成Xformers安装',\n",
-    "        disabled=False,\n",
-    "        button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "        tooltip='Description',\n",
-    "        icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "        )\n",
+    "hasInstalledBtn = widgets.Button(\n",
+    "    value=False,\n",
+    "    description='已经预装',\n",
+    "    disabled=False,\n",
+    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
     "    )\n",
+    "\n",
+    "finishedInstallBtn = widgets.Button(\n",
+    "    value=False,\n",
+    "    description='完成Xformers安装',\n",
+    "    disabled=False,\n",
+    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
+    "    )\n",
+    "\n",
+    "def showToast():\n",
+    "    print(f'本机GPU为【{gpu}】，对应的英伟达架构名为【{arch}】，已安装匹配【{arch}】架构的Xformers预编译包')\n",
+    "\n",
+    "    \n",
+    "def getXformersDir():\n",
+    "    # 查询已经安装好的xformers所在的目录位置\n",
+    "    cb = !source activate &&\\\n",
+    "    conda activate py3.10.6 &&\\\n",
+    "    python -c \"import xformers,os;print(os.path.dirname(xformers.__file__));\"\n",
+    "    return cb[0]\n",
     "    \n",
     "def installCMD(arch):\n",
     "    args = [\n",
@@ -306,25 +314,45 @@
     "       ]\n",
     "    cmd = (\" \").join(args) \n",
     "    !$cmd\n",
+    "\n",
+    "    xformersInstalledDir = getXformersDir()\n",
+    "    archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
+    "    \n",
+    "    with open(archTextDir,\"w\") as archText:\n",
+    "        archText.write(arch)\n",
+    "    \n",
+    "    with  open(archTextDir,'r') as file:\n",
+    "        print(file.read())\n",
+    "    \n",
     "    clear_output(wait=True)\n",
-    "    showToast(arch)\n",
+    "    showToast()\n",
+    "    display(finishedInstallBtn)\n",
     "\n",
     "archWhiteList = ['sm80','sm75','sm70','sm89','sm61']\n",
     "\n",
     "if arch in archWhiteList:\n",
-    "     installCMD(arch)\n",
+    "    # 通过python加载模块来检测是否有安装对应的模块\n",
+    "    cb=!source activate &&\\\n",
+    "    conda activate py3.10.6 &&\\\n",
+    "    python -c \"import xformers,os;print(xformers.__file__);\"\n",
+    "    if cb[0]=='None':\n",
+    "        installCMD(arch)\n",
+    "    else:\n",
+    "        xformersInstalledDir = getXformersDir()\n",
+    "        archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
+    "        with  open(archTextDir,'r') as file:\n",
+    "            installedArch = file.read()\n",
+    "        # print(installedArch)\n",
+    "        if installedArch!=arch:\n",
+    "            installCMD(arch)\n",
+    "        else:\n",
+    "            # 已经预装好了\n",
+    "            showToast()\n",
+    "            display(hasInstalledBtn)\n",
+    "        \n",
     "elif arch == 'sm86':\n",
     "    # print('该镜像已经预装该版本的编译包')\n",
-    "    display(\n",
-    "        widgets.Button(\n",
-    "            value=False,\n",
-    "            description='已经预装',\n",
-    "            disabled=False,\n",
-    "            button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "            tooltip='Description',\n",
-    "            icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "        )\n",
-    "    )\n",
+    "    display(hasInstalledBtn)\n",
     "\n",
     "else:\n",
     "    print(f'没有合适{gpu}的Xformers编译包')\n",
@@ -349,7 +377,7 @@
     "tags": []
    },
    "source": [
-    "## <i class=\"fa fa-language\"></i> 安装语言包（可选）"
+    "## <i class=\"fa fa-language\"></i> 安装中文语言包（可选）"
    ]
   },
   {
@@ -405,7 +433,7 @@
     "        if fileSize>=171055 :\n",
     "            if \"already exists and is not an empty directory\" in i:\n",
     "                btn.description='已经安装过'\n",
-    "                btn.button_style='warning'\n",
+    "                btn.button_style='info'\n",
     "                btn.icon='check-circle'\n",
     "            else:\n",
     "                btn.description='安装成功!'\n",
@@ -471,9 +499,9 @@
     "\n",
     "stylesDir = os.path.join(webUIDir, 'styles.csv')\n",
     "if os.path.exists(stylesDir):\n",
-    "    alertBtn.description='已经安装过!'\n",
+    "    alertBtn.description='已经安装过'\n",
     "    alertBtn.button_style='info'\n",
-    "    alertBtn.icon='check'\n",
+    "    alertBtn.icon='check-circle'\n",
     "else:  \n",
     "    alertBtn.description='下载中...'\n",
     "    alertBtn.button_style='warning'\n",
